runtime/opa-gatekeeper/templates/require-resource-limits.yaml
# OPA Gatekeeper Constraint Template - Require Resource Limits
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireresourcelimits
  annotations:
    description: "Requires containers to specify resource requests and limits"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResourceLimits
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireresourcelimits

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_exempt(container)
          not container.resources.limits.cpu
          msg := sprintf("Container %v must specify cpu limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_exempt(container)
          not container.resources.limits.memory
          msg := sprintf("Container %v must specify memory limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_exempt(container)
          not container.resources.requests.cpu
          msg := sprintf("Container %v must specify cpu requests", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not is_exempt(container)
          not container.resources.requests.memory
          msg := sprintf("Container %v must specify memory requests", [container.name])
        }

        is_exempt(container) {
          exempt := input.parameters.exemptImages[_]
          startswith(container.image, exempt)
        }
