runtime/opa-gatekeeper/templates/require-signed-images.yaml
# OPA Gatekeeper Constraint Template - Verify Image Signatures
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiresignedimages
  annotations:
    description: "Requires images from trusted registries"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireSignedImages
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedRegistries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiresignedimages

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not image_from_allowed_registry(container.image)
          msg := sprintf("Container %v uses image %v which is not from an allowed registry. Allowed: %v", [container.name, container.image, input.parameters.allowedRegistries])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not image_from_allowed_registry(container.image)
          msg := sprintf("Init container %v uses image %v which is not from an allowed registry", [container.name, container.image])
        }

        image_from_allowed_registry(image) {
          registry := input.parameters.allowedRegistries[_]
          startswith(image, registry)
        }
